# classist

./: .gitignore  LICENSE.md  README.md  setup.cfg
classist/: __init__.py
