[metadata]
name = classist
version = 0.0.1
description = Pretty classist signature inheritance with decoration
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
url = https://github.com/sirno/classist
license = MIT

[options]
packages = find:

[options.extras_require]
dev =
  pytest
  ruff
  tox

[tox:tox]
envlist =
  py10
  py11
  py12
